<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/the_card_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp"
    android:cardBackgroundColor="@color/colorWhite"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:cardBackgroundColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"


        >

        <TextView
            android:id="@+id/profile_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensans_bold_font"
            android:textColor="@color/colorHeaderBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/name"
            />
       <TextView
           android:id="@+id/language"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="4dp"
           android:layout_marginStart="70dp"
           app:layout_constraintTop_toBottomOf="@+id/profile_card_name"
           app:layout_constraintStart_toStartOf="parent"
           android:textSize="20sp"
           android:textColor="@color/colorPrimary"
           android:text="@string/Language"
           />
<TextView
    android:id="@+id/Rating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginStart="70dp"
    app:layout_constraintTop_toBottomOf="@+id/language"
    app:layout_constraintStart_toStartOf="parent"
    android:textColor="@color/colorCreatePagesFields"
    android:textSize="20sp"
    android:text="@string/Rating"
    />
        <ImageView
            android:id="@+id/card_offer_iv_star"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rating"
            android:src="@drawable/ic_star"
            />
<TextView
    android:id="@+id/the_rate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="3dp"
    app:layout_constraintStart_toEndOf="@id/card_offer_iv_star"
    app:layout_constraintTop_toBottomOf="@id/Rating"
    android:textColor="@color/colorRatingSaffron"
    android:textSize="18sp"
    android:text="4.9"
    />
<TextView
    android:id="@+id/tours"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="115dp"
    android:layout_marginStart="20dp"
    app:layout_constraintStart_toEndOf="@id/Rating"
    app:layout_constraintTop_toTopOf="parent"
    android:textColor="@color/colorCreatePagesFields"
    android:text="@string/Tours"
    android:textSize="20sp"
    />
        <TextView
            android:id="@+id/number_of_tours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="45dp"
            app:layout_constraintStart_toEndOf="@id/the_rate"
            app:layout_constraintTop_toBottomOf="@id/tours"
            android:textColor="@color/colorRatingSaffron"
            android:textSize="18sp"
            android:text="12"
            />
        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
            android:layout_marginTop="115dp"
            app:layout_constraintStart_toEndOf="@+id/tours"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorCreatePagesFields"
            android:textSize="20sp"
            android:text="@string/Rate"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toEndOf="@+id/number_of_tours"
            app:layout_constraintTop_toBottomOf="@+id/rate"
            android:textColor="@color/colorRatingSaffron"
            android:textSize="18sp"
            android:text="$20"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>



